# WarhammerScannerApp

./: .gitattributes  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/warhammer40kscanner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lieutenant_DA.xml
app/src/main/cpp/: CMakeLists.txt  GLESRenderer.cpp  GLESUtils.cpp  GLESUtils.h  VuforiaWrapper.cpp
app/src/main/cpp/CrossPlatform/: AppController.cpp
app/src/main/java/com/example/warhammer40kscanner/: ApiClient.kt  ApiService.kt  Capitulo.kt  FragmentsActivity.kt  InfoLink.kt  LoginRequest.kt  LoreActivity.kt  MainActivity.kt  MainAdapter.kt  MainModel.kt  SelectionAdapter.kt  SelectionEntry.kt  SesionActivity.kt  SplashActivity.kt  StatisticsDTO.kt  Subfaccion.kt  Texture.kt
app/src/main/res/drawable/: boton_selector.xml  edittext_sesion.xml  item_selection_background.xml  stats_table_border.xml  white_pannel_background.xml
app/src/main/res/layout/: activity_fragments.xml  activity_lore.xml  activity_main.xml  activity_sesion.xml  activity_splash.xml  dialog_fullscreen_image.xml  item_selection.xml  row_item.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/warhammer40kscanner/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
